# genealogy-backend

./: .env.dev.docker  .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: relationship.py
app/config/: config.py
app/data/: person.py  relationship.py
app/database/: database.py
app/models/: person.py  relationship.py
app/routers/: persons.py
backend/: .env.dev.docker  .env.sample  Makefile  pyproject.toml
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: agent.py  event.py  person.py  relationship.py  source_description.py
backend/app/core/: config.py
backend/app/data/: agent.py  event.py  source_description.py
backend/app/models/: agent.py  event.py  person.py  relationship.py  source_description.py
src/: main.ts
