[tool.poetry]
name = "genealogy-backend"
version = "0.1.0"
description = ""
authors = ["Simon Bragg <simon.bragg+github@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
pygedcomx = "^0.0.1"
beanie = "^1.11.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
